[gd_scene load_steps=41 format=2]

[ext_resource path="res://media/hud/rader.png" type="Texture" id=1]
[ext_resource path="res://entities/player1.gd" type="Script" id=2]
[ext_resource path="res://media/hud/border.png" type="Texture" id=3]
[ext_resource path="res://entities/Audio.gd" type="Script" id=4]
[ext_resource path="res://media/hud/radar-dortor.png" type="Texture" id=5]
[ext_resource path="res://media/player_aspone.png" type="Texture" id=6]
[ext_resource path="res://media/hud/oneplayer.png" type="Texture" id=7]
[ext_resource path="res://media/hud/twoplayer.png" type="Texture" id=8]
[ext_resource path="res://media/hud/extender.png" type="Texture" id=9]
[ext_resource path="res://media/hud/onelifeber.png" type="Texture" id=10]
[ext_resource path="res://media/fonts/calcu-fonts.fnt" type="BitmapFont" id=11]
[ext_resource path="res://media/fonts/extra-fonts.fnt" type="BitmapFont" id=12]
[ext_resource path="res://media/fonts/score-fonts.fnt" type="BitmapFont" id=13]
[ext_resource path="res://media/fonts/counter-fonts.fnt" type="BitmapFont" id=14]
[ext_resource path="res://media/hud/twolifeber.png" type="Texture" id=15]
[ext_resource path="res://media/items.png" type="Texture" id=16]
[ext_resource path="res://scripts/Label-Shine.gd" type="Script" id=17]
[ext_resource path="res://media/hud/radar-p1.png" type="Texture" id=18]
[ext_resource path="res://media/hud/radar-recruto.png" type="Texture" id=19]
[ext_resource path="res://media/hud/radar-it-bullet.png" type="Texture" id=20]
[ext_resource path="res://media/hud/radar-car.png" type="Texture" id=21]
[ext_resource path="res://media/hud/radar-it-money.png" type="Texture" id=22]
[ext_resource path="res://media/hud/radar-it-cloro.png" type="Texture" id=23]
[ext_resource path="res://media/hud/radar-it-can.png" type="Texture" id=24]
[ext_resource path="res://media/hud/radar-it-meds.png" type="Texture" id=25]
[ext_resource path="res://entities/Radar.gd" type="Script" id=26]
[ext_resource path="res://media/hud/radar-p2.png" type="Texture" id=27]
[ext_resource path="res://media/hud/radar-crosshair.png" type="Texture" id=28]
[ext_resource path="res://media/hud/border2.png" type="Texture" id=29]
[ext_resource path="res://media/player_shadow.png" type="Texture" id=30]

[sub_resource type="Animation" id=1]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 110, 111, 112, 113, 114, 115, 116, 117, 118, 119 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 0, 1 ),
"update": 0,
"values": [ 0.8, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "DIEa"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.11
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0509395, 0.0999551 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:onfloor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=3]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:ouch")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 107 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "PAINs"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 100, 101, 102, 103, 104 ]
}

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 2, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 20, 40, 20 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 7 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 19, 8, 7 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 28, 27, 28 ]
}

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:aniframe")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "STEPs"
}, {
"args": [  ],
"method": "STEPs"
} ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 35 )

[node name="player1" type="KinematicBody2D" groups=[
"player",
"radar_me",
]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
aniframe = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.8
anims/die = SubResource( 1 )
anims/ducking = SubResource( 2 )
anims/hurt = SubResource( 3 )
anims/hurtbad = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/jump2 = SubResource( 7 )
anims/sneak = SubResource( 8 )
anims/walk = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 10
vframes = 12

[node name="Shadow" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 30 )
hframes = 10
vframes = 12

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.01
drag_margin_top = 1.0
drag_margin_right = 0.01

[node name="Col2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
z_index = 10
shape = SubResource( 10 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 4 )

[node name="Audio2" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
script = ExtResource( 4 )

[node name="Audio3" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Debug" type="Label" parent="CanvasLayer"]
margin_left = 700.0
margin_right = 822.0
margin_bottom = 14.0
rect_scale = Vector2( 1, 0.8 )
custom_colors/font_color = Color( 0, 1, 0.501961, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FORA BOLSONARO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LBorder" type="Sprite" parent="CanvasLayer"]
position = Vector2( 0, 422 )
z_as_relative = false
texture = ExtResource( 3 )
centered = false

[node name="Extender" type="Sprite" parent="CanvasLayer/LBorder"]
position = Vector2( 6, 0 )
z_as_relative = false
texture = ExtResource( 9 )
centered = false

[node name="RBorder" type="Sprite" parent="CanvasLayer/LBorder"]
position = Vector2( 497, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
z_as_relative = false
texture = ExtResource( 29 )
centered = false
flip_h = true

[node name="Radar" type="Sprite" parent="CanvasLayer/LBorder"]
position = Vector2( 192, 0 )
z_as_relative = false
texture = ExtResource( 1 )
centered = false
script = ExtResource( 26 )

[node name="CROSSHAIR" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
position = Vector2( 56.5, 15.5 )
z_index = 1
texture = ExtResource( 28 )

[node name="Rplay1" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 4.5, 35.5 )
texture = ExtResource( 18 )

[node name="Rplay2" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 11.5, 35.5 )
texture = ExtResource( 27 )

[node name="Rrecruto" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 18.5, 35.5 )
texture = ExtResource( 19 )

[node name="Rdortor" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 25.5, 35.5 )
texture = ExtResource( 5 )

[node name="Rcar" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 34, 35.5 )
texture = ExtResource( 21 )

[node name="Rbullet" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 40.5, 35.5 )
texture = ExtResource( 20 )

[node name="Rcan" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 43.5, 35.5 )
texture = ExtResource( 24 )

[node name="Rcloro" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 46.5, 35.5 )
texture = ExtResource( 23 )

[node name="Rmoney" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 50.5, 35.5 )
texture = ExtResource( 22 )

[node name="Rmeds" type="Sprite" parent="CanvasLayer/LBorder/Radar"]
visible = false
position = Vector2( 54.5, 35.5 )
texture = ExtResource( 25 )

[node name="Player2" type="Sprite" parent="CanvasLayer/LBorder"]
position = Vector2( 306, 0 )
z_as_relative = false
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="Life2" type="TextureProgress" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 12.0
margin_top = 17.0
margin_right = 172.0
margin_bottom = 57.0
value = 100.0
texture_progress = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Men2" type="Label" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 158.0
margin_top = 4.0
margin_right = 172.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "64"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 35.0
margin_top = 25.0
margin_right = 173.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "1.000.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra2" type="Label" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 36.0
margin_top = 40.0
margin_right = 172.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "     extra - 100.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo2" type="Label" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 20.0
margin_top = 30.0
margin_right = 60.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99
99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletI2" type="Sprite" parent="CanvasLayer/LBorder/Player2/Ammo2"]
position = Vector2( -3.5, 7.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 10

[node name="BulletII2" type="Sprite" parent="CanvasLayer/LBorder/Player2/Ammo2"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -3.5, 22.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 10

[node name="iMoney2" type="Label" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 30.0
margin_top = 69.0
margin_right = 40.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money2" type="Sprite" parent="CanvasLayer/LBorder/Player2/iMoney2"]
position = Vector2( -8.5, 4.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 11

[node name="iCloro2" type="Label" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 52.0
margin_top = 69.0
margin_right = 62.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cloro2" type="Sprite" parent="CanvasLayer/LBorder/Player2/iCloro2"]
position = Vector2( -1.5, 4.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 12

[node name="iCan2" type="Label" parent="CanvasLayer/LBorder/Player2"]
visible = false
margin_left = 74.0
margin_top = 69.0
margin_right = 84.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Can2" type="Sprite" parent="CanvasLayer/LBorder/Player2/iCan2"]
position = Vector2( -1.5, 4.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 13

[node name="Player1" type="Sprite" parent="CanvasLayer/LBorder"]
position = Vector2( 7, 0 )
z_as_relative = false
texture = ExtResource( 7 )
centered = false
hframes = 2
frame = 1

[node name="Life1" type="TextureProgress" parent="CanvasLayer/LBorder/Player1"]
margin_left = 12.0
margin_top = 17.0
margin_right = 172.0
margin_bottom = 57.0
value = 100.0
texture_progress = ExtResource( 10 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Men1" type="Label" parent="CanvasLayer/LBorder/Player1"]
margin_left = 158.0
margin_top = 4.0
margin_right = 172.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "64"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="CanvasLayer/LBorder/Player1"]
margin_left = 11.0
margin_top = 25.0
margin_right = 149.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "1.000.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra1" type="Label" parent="CanvasLayer/LBorder/Player1"]
margin_left = 12.0
margin_top = 40.0
margin_right = 148.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "     extra - 100.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo1" type="Label" parent="CanvasLayer/LBorder/Player1"]
margin_left = 168.0
margin_top = 30.0
margin_right = 208.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99
99"
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
shinetype = 3

[node name="BulletI1" type="Sprite" parent="CanvasLayer/LBorder/Player1/Ammo1"]
position = Vector2( -3.5, 7.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 10

[node name="BulletII1" type="Sprite" parent="CanvasLayer/LBorder/Player1/Ammo1"]
visible = false
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -3.5, 22.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 10

[node name="iMoney1" type="Label" parent="CanvasLayer/LBorder/Player1"]
visible = false
margin_left = 30.0
margin_top = 69.0
margin_right = 40.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money1" type="Sprite" parent="CanvasLayer/LBorder/Player1/iMoney1"]
position = Vector2( -8.5, 4.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 11

[node name="iCloro1" type="Label" parent="CanvasLayer/LBorder/Player1"]
visible = false
margin_left = 52.0
margin_top = 69.0
margin_right = 62.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cloro1" type="Sprite" parent="CanvasLayer/LBorder/Player1/iCloro1"]
position = Vector2( -1.5, 4.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 12

[node name="iCan1" type="Label" parent="CanvasLayer/LBorder/Player1"]
visible = false
margin_left = 73.0
margin_top = 69.0
margin_right = 83.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Can1" type="Sprite" parent="CanvasLayer/LBorder/Player1/iCan1"]
position = Vector2( -0.5, 4.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 13

[node name="iArrest1" type="Label" parent="CanvasLayer/LBorder/Player1"]
visible = false
margin_left = 98.0
margin_top = 69.0
margin_right = 108.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrest1" type="Sprite" parent="CanvasLayer/LBorder/Player1/iArrest1"]
position = Vector2( -4.5, 4.5 )
texture = ExtResource( 16 )
hframes = 10
vframes = 2
frame = 14
